test/error/ConsoleWriteLineArrayStg.fu
public static class Test
{
	public static bool Run()
	{
		int[2] a;
		a[0] = 5;
		a[1] = 10;
		Console.WriteLine(a); //ERROR: Cannot convert 'int[2]' to 'printable'
		return true;
	}
}
